--- a/home7/templates/item_create.html
+++ b/home7/templates/item_create.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Создание товара</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Создание товара{% endblock %}
+{% block content %}
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Завершить">
     </form>
-</body>
-</html>
+{% endblock %}
