--- a/home7/templates/compare_request.html
+++ b/home7/templates/compare_request.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Сравнение департаментов</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Сравнение департаментов{% endblock %}
+
+{% block content %}
     {% include 'form.html' with button_label='Сравнить' %}
-</body>
-</html>
+{% endblock %}
