--- a/home7/templates/department_update.html
+++ b/home7/templates/department_update.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Изменение департамента</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Изменение департамента{% endblock %}
+
+{% block content %}
     {% include 'form.html' with button_label='Завершить' %}
-</body>
-</html>
+{% endblock %}
