--- a/home7/templates/form.html
+++ b/home7/templates/form.html
@@ -1,4 +1,4 @@
-<form method="post">
+<form method="post" style="padding-left:16px; line-height: 1.7;">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="{{ button_label }}">
